# firebase-auth-sdk

./: Cargo.toml  README.md  flake.nix
src/: error.rs  lib.rs
src/api/: sign_in.rs  sign_up.rs  token.rs  user.rs
