[package]
name = "firebase-auth"
version = "0.2.0"
authors = ["Federico Fusco", "khant <contact@khant.dev>", "adamjhf"]
edition = "2021"
description = "Firebase authentication SDK for rust."
license-file = "LICENSE"
homepage = "https://github.com/adamjhf/firebase-auth-sdk"
documentation = "https://github.com/adamjhf/firebase-auth-sdk"
repository = "https://github.com/adamjhf/firebase-auth-sdk"
readme = "README.md"
keywords = ["jwt", "firebase", "authentication"]
categories = ["authentication"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest-middleware = { version = "0.4.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
serde_json = "1"
thiserror = "1.0.30"
